Closed
Bug 1646328
Opened 5 years ago
Closed 5 years ago
Crash in [@ nsFrameLoader::Create]
Categories
(Core :: DOM: Navigation, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla79
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox77 | --- | unaffected |
| firefox78 | --- | unaffected |
| firefox79 | --- | fixed |
People
(Reporter: calixte, Assigned: nika)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-490d47cd-8b5c-4907-89bf-fae3b0200616.
Top 10 frames of crashing thread:
0 libxul.so nsFrameLoader::Create dom/base/nsFrameLoader.cpp:420
1 libxul.so mozilla::dom::XULFrameElement::LoadSrc dom/xul/XULFrameElement.cpp:91
2 libxul.so mozilla::dom::XULFrameElement::BindToTree dom/xul/XULFrameElement.cpp:144
3 libxul.so nsINode::ReplaceOrInsertBefore dom/base/nsINode.cpp:2690
4 libxul.so mozilla::dom::Node_Binding::appendChild dom/bindings/NodeBinding.cpp:989
5 libxul.so bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions> dom/bindings/BindingUtils.cpp:3219
6 libxul.so js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:578
7 libxul.so Interpret js/src/vm/Interpreter.cpp:641
8 libxul.so js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:613
9 libxul.so js::Call js/src/vm/Interpreter.cpp:658
There are 12 crashes (from 6 installations) in nightly 79 starting with buildid 20200616092900. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1640019.
[1] https://hg.mozilla.org/mozilla-central/rev?node=d027f301f08c
| Reporter | ||
Updated•5 years ago
|
Flags: needinfo?(nika)
| Assignee | ||
Comment 1•5 years ago
|
||
It looks like my assertion was a bit too strong here. I would like to eventually replace this with a better solution which doesn't provide mismatched remote types and process IDs.
Assignee: nobody → nika
Flags: needinfo?(nika)
| Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Pushed by nlayzell@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/897f6873d4c1
Downgrade sameProcessAsFrameLoader/remoteType to a debug assert, r=mattwoodrow
Comment 4•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•