Bug 1646328 - Downgrade sameProcessAsFrameLoader/remoteType to a debug assert, r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D80259